--- a/Euler.xcodeproj/xcshareddata/xcschemes/Euler.xcscheme
+++ b/Euler.xcodeproj/xcshareddata/xcschemes/Euler.xcscheme
@@ -50,6 +50,11 @@
                BlueprintName = "EulerUnitTests"
                ReferencedContainer = "container:Euler.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "FUNumberTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
@@ -89,7 +94,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "13"
+            argument = "5"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
